--- a/EnvironmentMonitor_HighLevelApp/EnvironmentMonitor_HighLevelApp.vcxproj
+++ b/EnvironmentMonitor_HighLevelApp/EnvironmentMonitor_HighLevelApp.vcxproj
@@ -38,9 +38,13 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
     <PartnerComponents>005180BC-402F-4CB3-A662-72937DBCDE47</PartnerComponents>
+    <TargetHardwareDirectory>..\Hardware\avnet_mt3620_sk</TargetHardwareDirectory>
+    <TargetHardwareDefinition>sample_hardware.json</TargetHardwareDefinition>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
     <PartnerComponents>005180BC-402F-4CB3-A662-72937DBCDE47</PartnerComponents>
+    <TargetHardwareDirectory>..\Hardware\avnet_mt3620_sk</TargetHardwareDirectory>
+    <TargetHardwareDefinition>sample_hardware.json</TargetHardwareDefinition>
   </PropertyGroup>
   <ItemGroup>
     <ClCompile Include="azure_iot_utilities.c" />
@@ -66,8 +70,6 @@
     <ClInclude Include="i2c.h" />
     <ClInclude Include="lps22hh_reg.h" />
     <ClInclude Include="lsm6dso_reg.h" />
-    <ClInclude Include="mt3620_avnet_dev.h" />
-    <ClInclude Include="mt3620_rdb.h" />
     <ClInclude Include="applibs_versions.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
