--- a/EnvironmentMonitor_HighLevelApp/app_manifest.json
+++ b/EnvironmentMonitor_HighLevelApp/app_manifest.json
@@ -11,10 +11,21 @@
     "AllowedConnections": [ "iotc-1a669eb0-bcd0-49a7-85bf-c003c26e5f7d.azure-devices.net" ],
     "AllowedTcpServerPorts": [],
     "AllowedUdpServerPorts": [],
-    "Gpio": [ 0, 4, 5, 8, 9, 10, 12, 13, 34, 1 ],
+    "Gpio": [
+      "$AVNET_MT3620_SK_APP_STATUS_LED_YELLOW",
+      "$AVNET_MT3620_SK_WLAN_STATUS_LED_YELLOW",
+      "$AVNET_MT3620_SK_USER_LED_RED",
+      "$AVNET_MT3620_SK_USER_LED_GREEN",
+      "$AVNET_MT3620_SK_USER_LED_BLUE",
+      "$AVNET_MT3620_SK_USER_BUTTON_A",
+      "$AVNET_MT3620_SK_USER_BUTTON_B",
+      "$AVNET_MT3620_SK_GPIO0",
+      "$AVNET_MT3620_SK_GPIO34",
+      "$AVNET_MT3620_SK_GPIO1"
+    ],
     "Uart": [],
-    "I2cMaster": [ "ISU2" ],
-    "SpiMaster": [],
+    "I2cMaster": [ "$AVNET_MT3620_SK_ISU2_I2C" ],
+    "SpiMaster": [ ],
     "WifiConfig": true,
     "NetworkConfig": false,
     "SystemTime": false
