--- a/EnvironmentMonitor_HighLevelApp/EnvironmentMonitor_HighLevelApp.vcxproj
+++ b/EnvironmentMonitor_HighLevelApp/EnvironmentMonitor_HighLevelApp.vcxproj
@@ -40,7 +40,7 @@
     <PartnerComponents>005180BC-402F-4CB3-A662-72937DBCDE47</PartnerComponents>
     <TargetHardwareDirectory>..\Hardware\avnet_mt3620_sk</TargetHardwareDirectory>
     <TargetHardwareDefinition>sample_hardware.json</TargetHardwareDefinition>
-    <IncludePath>drivers\BME680;$(SysRootIncludePath);$(IncludePath)</IncludePath>
+    <IncludePath>libraries;drivers\BME680;$(SysRootIncludePath);$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
     <PartnerComponents>005180BC-402F-4CB3-A662-72937DBCDE47</PartnerComponents>
@@ -69,6 +69,7 @@
     <ClInclude Include="connection_strings.h" />
     <ClInclude Include="deviceTwin.h" />
     <ClInclude Include="epoll_timerfd_utilities.h" />
+    <ClInclude Include="sensors.h" />
     <ClInclude Include="oled.h" />
     <ClInclude Include="parson.h" />
     <ClInclude Include="sd1306.h" />
