--- a/EnvironmentMonitor_HighLevelApp/app_manifest.json
+++ b/EnvironmentMonitor_HighLevelApp/app_manifest.json
@@ -3,7 +3,7 @@
   "Name" : "EnvironmentMonitor_HighLevelApp",
   "ComponentId" : "685f13af-25a5-40b2-8dd8-8cbc253ecbd8",
   "EntryPoint": "/bin/app",
-  "CmdArgs": [],
+  "CmdArgs": ["1.0.0"],
   "Capabilities": {
     //// M4 application's ComponentID
     "AllowedApplicationConnections": [ "005180bc-402f-4cb3-a662-72937dbcde47" ],
