update RT app after OS updated to 19.09

--- a/IntercoreCommsADC_RTApp_MT3620_BMetal/app_manifest.json
+++ b/IntercoreCommsADC_RTApp_MT3620_BMetal/app_manifest.json
@@ -6,7 +6,7 @@
   "Capabilities": {
     //// A7 application connection
     "AllowedApplicationConnections": [ "685f13af-25a5-40b2-8dd8-8cbc253ecbd8" ],
-    "Adc": [ "ADC0" ]
+    "Adc": [ "ADC-CONTROLLER-0" ]
   },
   "ApplicationType": "RealTimeCapable"
 }
