--- a/RealTimeCore/CMakeSettings.json
+++ b/RealTimeCore/CMakeSettings.json
@@ -2,7 +2,6 @@
   "environments": [
     {
       "environment": "AzureSphere",
-
       "AzureSphereTargetApiSet": "3+Beta1909"
     }
   ],
@@ -11,9 +10,7 @@
       "name": "ARM-Debug",
       "generator": "Ninja",
       "configurationType": "Debug",
-      "inheritEnvironments": [
-        "AzureSphere"
-      ],
+      "inheritEnvironments": [ "AzureSphere" ],
       "buildRoot": "${projectDir}\\out\\${name}-${env.AzureSphereTargetApiSet}",
       "installRoot": "${projectDir}\\install\\${name}-${env.AzureSphereTargetApiSet}",
       "cmakeCommandArgs": "--no-warn-unused-cli",
@@ -22,15 +19,23 @@
       "variables": [
         {
           "name": "CMAKE_TOOLCHAIN_FILE",
-          "value": "${env.AzureSphereDefaultSDKDir}CMakeFiles\\AzureSphereRTCoreToolchain.cmake"
+          "value": "${env.AzureSphereDefaultSDKDir}CMakeFiles\\AzureSphereRTCoreToolchain.cmake",
+          "type": "STRING"
         },
         {
           "name": "AZURE_SPHERE_TARGET_API_SET",
-          "value": "${env.AzureSphereTargetApiSet}"
+          "value": "${env.AzureSphereTargetApiSet}",
+          "type": "STRING"
         },
         {
           "name": "ARM_GNU_PATH",
-          "value": "${env.DefaultArmToolsetPath}"
+          "value": "${env.DefaultArmToolsetPath}",
+          "type": "STRING"
+        },
+        {
+          "name": "AZURE_SPHERE_TARGET_HARDWARE_DEFINITION_DIRECTORY",
+          "value": "../Hardware/avnet_mt3620_sk",
+          "type": "STRING"
         }
       ]
     },
@@ -38,9 +43,7 @@
       "name": "ARM-Release",
       "generator": "Ninja",
       "configurationType": "Release",
-      "inheritEnvironments": [
-        "AzureSphere"
-      ],
+      "inheritEnvironments": [ "AzureSphere" ],
       "buildRoot": "${projectDir}\\out\\${name}-${env.AzureSphereTargetApiSet}",
       "installRoot": "${projectDir}\\install\\${name}-${env.AzureSphereTargetApiSet}",
       "cmakeCommandArgs": "--no-warn-unused-cli",
@@ -49,15 +52,18 @@
       "variables": [
         {
           "name": "CMAKE_TOOLCHAIN_FILE",
-          "value": "${env.AzureSphereDefaultSDKDir}CMakeFiles\\AzureSphereRTCoreToolchain.cmake"
+          "value": "${env.AzureSphereDefaultSDKDir}CMakeFiles\\AzureSphereRTCoreToolchain.cmake",
+          "type": "STRING"
         },
         {
           "name": "AZURE_SPHERE_TARGET_API_SET",
-          "value": "${env.AzureSphereTargetApiSet}"
+          "value": "${env.AzureSphereTargetApiSet}",
+          "type": "STRING"
         },
         {
           "name": "ARM_GNU_PATH",
-          "value": "${env.DefaultArmToolsetPath}"
+          "value": "${env.DefaultArmToolsetPath}",
+          "type": "STRING"
         }
       ]
     }
