--- a/RealTimeCore/CMakeLists.txt
+++ b/RealTimeCore/CMakeLists.txt
@@ -5,8 +5,8 @@ cmake_minimum_required (VERSION 3.8)
 project (EnvironmentMonitor_AzureSphere_RealTimeCore C)
 
 # Create executable
-add_executable (${PROJECT_NAME} main.c mt3620-intercore.c mt3620-timer-poll.c mt3620-uart-poll.c mt3620-adc.c)
-target_link_libraries (${PROJECT_NAME} -lm)
+add_executable (${PROJECT_NAME} main.c mt3620-intercore.c mt3620-timer-poll.c mt3620-uart-poll.c mt3620-adc.c bsec_serialized_configurations_iaq.c)
+target_link_libraries (${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/libalgobsec.a -lm)
 set_target_properties (${PROJECT_NAME} PROPERTIES LINK_DEPENDS ${CMAKE_SOURCE_DIR}/linker.ld)
 
 # Add MakeImage post-build command
